@@ -12,6 +12,8 @@
    Rename the editor menu item to 'Spelling Suggestions'.
    When adding words to the dictionary, remove all indicators on
    these words.
+ * src/gui.c, src/gui.h, src/scplugin.c:
+   Add keybinding to toggle the 'Check while typing' setting.
 
 
 2008-10-17  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
